--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -3,8 +3,9 @@
     {{ with .Site.Params.avatarurl }}
       <div class="avatar"><img src="{{ . | relURL }}" alt="avatar"></div>
     {{ end }}
-    <h1>{{ .Site.Params.author }}</h1>
+    <h1 class="home-name">{{ .Site.Params.author }}</h1>
     <h2>{{ .Site.Params.info }}</h2>
+    <h2>{{ .Site.Params.info2 }}</h2>
     {{ with .Site.Params.social }}
     <ul>
       {{ range sort .}}
